<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>cloud.soyorin</groupId>
        <artifactId>rana-bot</artifactId>
        <version>0.0.1-SNAPSHOT</version>
    </parent>

    <description>服务层</description>

    <artifactId>rana-bot-service</artifactId>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <rana.bot.version>0.0.1-SNAPSHOT</rana.bot.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>cloud.soyorin</groupId>
            <artifactId>rana-bot-model</artifactId>
            <version>${rana.bot.version}</version>
        </dependency>
        <dependency>
            <groupId>cloud.soyorin</groupId>
            <artifactId>rana-bot-framework</artifactId>
            <version>${rana.bot.version}</version>
        </dependency>
        <dependency>
            <groupId>cloud.soyorin</groupId>
            <artifactId>rana-bot-dao</artifactId>
            <version>${rana.bot.version}</version>
        </dependency>
    </dependencies>


</project>